--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -197,3 +197,5 @@ mark_zhaocai: 'https://seer2-resource.yuuinih.com/png/markImage/3053.png'
 mark_jinbao: 'https://seer2-resource.yuuinih.com/png/markImage/3054.png'
 mark_xunjie: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
 mark_chihuan: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
+mark_qianggong: 'https://seer2-resource.yuuinih.com/png/markImage/3283.png'
+mark_yurenfantan: 'https://seer2-resource.yuuinih.com/png/markImage/3284.png'
