--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -650,3 +650,16 @@ skill_yingzhilijue: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3
 skill_yingzhiruiyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_yingzhuasilie: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
 skill_baiyuzhuiji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_fuchongtuji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_yutusishi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_feiyujian: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_yurentuji: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_yutubashi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_yurenjiazou: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_yurenzhan: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_yutushiliushi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_salangulerjian: 'https://seer2-resource.yuuinih.com/sound/skill/11446.mp3'
+skill_gangduoyizhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_yutuyishi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_yutulingshi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_yutubaibashi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
