--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -1740,8 +1740,6 @@
     stackStrategy: refresh
     destroyable: true
     keepOnSwitchOut: false
-  tags:
-    - status
   effect:
     - effect_mark_longlinjia_reflect_damage_50_percent
 - id: mark_heianwuzhi
@@ -1857,8 +1855,6 @@
     stackable: false
     destroyable: true
     keepOnSwitchOut: true
-  tags:
-    - status
   effect:
     - effect_mark_heal_40_per_turn
     - effect_mark_add_crit_on_damage
@@ -1871,13 +1867,9 @@
     stackStrategy: refresh
     destroyable: true
     keepOnSwitchOut: true
-  tags:
-    - buff
   effect:
     - effect_mark_next_non_status_skill_sure_crit
 - id: mark_zhaocai
-  tags:
-    - status
   config:
     persistent: false
     stackable: true
@@ -1888,8 +1880,6 @@
   effect:
     - effect_mark_increase_damage_dealt_25_percent
 - id: mark_jinbao
-  tags:
-    - status
   config:
     persistent: false
     stackable: true
@@ -1900,8 +1890,6 @@
   effect:
     - effect_mark_reduce_damage_taken_25_percent
 - id: mark_xunjie
-  tags:
-    - status
   config:
     persistent: false
     stackable: true
@@ -1912,8 +1900,6 @@
   effect:
     - effect_mark_priority_add_1
 - id: mark_chihuan
-  tags:
-    - status
   config:
     persistent: false
     stackable: true
@@ -1923,3 +1909,25 @@
     keepOnSwitchOut: true
   effect:
     - effect_mark_priority_reduce_1
+- id: mark_qianggong
+  config:
+    persistent: true
+    stackable: true
+    stackStrategy: stack
+    destroyable: true
+    duration: -1
+    keepOnSwitchOut: false
+    maxStacks: 3
+  effect:
+    - effect_mark_add_atk_stack_x35
+- id: mark_yurenfantan
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: false
+  effect:
+    - effect_mark_fantan_reflect_damage_1_3
