--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -7830,3 +7830,158 @@
   tags: []
   effect:
     - effect_skill_add_fixed_damage_50_if_last
+- id: skill_fuchongtuji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 60
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_def_1_stage_10_percent # TODO: 10%弱化对手物防1级
+- id: skill_yutusishi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: [yutu]
+  effect:
+    - effect_skill_add_mark_qianggong_1_stack # TODO: 使自身获得1层强攻
+- id: skill_feiyujian
+  element: Flying
+  category: Special
+  target: opponent
+  power: 35
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: [2, 3]
+- id: skill_yurentuji
+  element: Flying
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_liuxie_50_opponent
+- id: skill_yutubashi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: [yutu]
+  effect:
+    - effect_skill_add_mark_qianggong_1_stack
+- id: skill_yurenjiazou
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yurenfantan
+- id: skill_yurenzhan
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: true
+  tags: []
+  effect: []
+- id: skill_yutushiliushi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: [yutu]
+  effect:
+    - effect_skill_add_mark_qianggong_1_stack
+- id: skill_salangulerjian
+  element: Flying
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_15_percent
+- id: skill_gangduoyizhi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage_and_other_1_stage # TODO: 强化自身物攻1级及其他1项能力1级
+- id: skill_yutuyishi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  priority: 1
+  tags: [yutu]
+  effect:
+    - effect_skill_priority_plus_1_if_atk_over_500 # TODO: 自身物攻值＞500时先制+1
+- id: skill_yutulingshi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: [yutu]
+  effect:
+    - effect_skill_sure_hit_if_atk_over_500 # TODO: 自身物攻值＞500时必中
+- id: skill_yutubaibashi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 120
+  rage: 35
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: [yutu]
+  effect:
+    - effect_skill_fixed_damage_over_atk_500 # TODO: 附加自身物攻值＞500的伤害
