--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -199,3 +199,10 @@ mark_xunjie: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
 mark_chihuan: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
 mark_qianggong: 'https://seer2-resource.yuuinih.com/png/markImage/3283.png'
 mark_yurenfantan: 'https://seer2-resource.yuuinih.com/png/markImage/3284.png'
+mark_dingshizhadan: 'https://seer2-resource.yuuinih.com/png/markImage/3191.png'
+mark_shijianfaze: 'https://seer2-resource.yuuinih.com/png/markImage/3192.png'
+mark_shijianhudun: 'https://seer2-resource.yuuinih.com/png/markImage/3193.png'
+mark_shijianzhadan: 'https://seer2-resource.yuuinih.com/png/markImage/3194.png'
+mark_yuzhiweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3195.png'
+mark_chuansuoweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3196.png'
+mark_shiguangchongsheng: 'https://seer2-resource.yuuinih.com/png/markImage/3198.png'
