--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -663,3 +663,17 @@ skill_gangduoyizhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3
 skill_yutuyishi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
 skill_yutulingshi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
 skill_yutubaibashi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_ruili: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_003.mp3'
+skill_dingshizhadan: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_shijianfaze: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_gaosuzhuangji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_shijianjiasu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_shiguangdaoliu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_shiguangchongji: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_shiguangliushu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_shiguanghudun: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_shiguangzhongcai: 'https://seer2-resource.yuuinih.com/sound/skill/11084.mp3'
+skill_shijianzhadan: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_yuzhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_chuansuoweilai: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_shiguanghongliu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
