--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -250,6 +250,17 @@
     conditions:
       - type: selfUseSkill
       - *condition_probability_10_percent_template
+- id: effect_skill_raise_spe_1_stage_20_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: spe
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_20_percent_template
 - id: effect_skill_raise_atk_2_stages
   trigger: BeforeHit
   priority: 0
@@ -4425,7 +4436,6 @@
       value: mark_shandianwaiyi
   condition:
     type: selfUseSkill
-
 # 20%强化自身物攻1级
 - id: effect_skill_raise_atk_20_percent
   trigger: BeforeHit
@@ -8435,3 +8445,174 @@
     conditions:
       - type: selfUseSkill
       - *condition_self_atk_over_500
+# 如果有时间法则，则额外附加50点伤害，否则添加定时炸弹
+- id: effect_skill_add_damage_50_or_add_mark_dingshizhadan
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: selfHasMark
+      baseId: mark_shijianfaze
+    trueOperator:
+      type: addModified
+      target: damageContext
+      percent: 0
+      delta: 50
+    falseOperator:
+      type: addMark
+      target: opponent
+      mark:
+        type: entity:baseMark
+        value: mark_dingshizhadan
+  condition:
+    type: selfUseSkill
+# 使自身获得时间法则
+- id: effect_skill_add_mark_shijianfaze
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shijianfaze
+  condition:
+    type: selfUseSkill
+# 强化双方速度1级
+- id: effect_skill_raise_both_spe_1_stage
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    - <<: *apply_self_statstage_+1_template
+      statType: spe
+    - <<: *apply_opponent_statstage_-1_template
+      statType: spe
+      value: 1
+  condition:
+    type: selfUseSkill
+# 具有时间法则时，弱化对手两级
+- id: effect_skill_reduce_opponent_spe_2_stage_if_shijianfaze
+  trigger: BeforeHit
+  priority: -1
+  apply:
+    <<: *apply_opponent_statstage_-1_template
+    statType: spe
+    value: -2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shijianfaze
+# 弱化双方特攻1级
+- id: effect_skill_reduce_both_spa_1_stage
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    - <<: *apply_self_statstage_+1_template
+      statType: spa
+      value: -1
+    - <<: *apply_opponent_statstage_-1_template
+      statType: spa
+  condition:
+    type: selfUseSkill
+# 具有时间法则时，额外强化自身特攻2级
+- id: effect_skill_raise_self_spa_2_stage_if_has_shijianfaze
+  trigger: BeforeHit
+  priority: -1
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: spa
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shijianfaze
+# 先出手时必中
+- id: effect_skill_sure_hit_if_first
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setSureHit
+    target: usingSkillContext
+    priority: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: isFirstSkillUsedThisTurn
+# 先出手时暴击率增加50%
+- id: effect_skill_add_crit_rate_50_if_first
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addCritRate
+    target: usingSkillContext
+    value: 50
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: isFirstSkillUsedThisTurn
+# 使自身获得时间护盾
+- id: effect_skill_add_mark_shijianhudun
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shijianhudun
+  condition:
+    type: selfUseSkill
+# 如果有时间法则，则额外附加50点伤害，否则添加定时炸弹
+- id: effect_skill_add_damage_100_or_add_mark_shijianzhadan
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: selfHasMark
+      baseId: mark_shijianfaze
+    trueOperator:
+      type: addModified
+      target: damageContext
+      percent: 0
+      delta: 100
+    falseOperator:
+      type: addMark
+      target: opponent
+      mark:
+        type: entity:baseMark
+        value: mark_shijianzhadan
+  condition:
+    type: selfUseSkill
+# 使自身获得穿梭未来
+- id: effect_skill_add_mark_chuansuoweilai
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_chuansuoweilai
+  condition:
+    type: selfUseSkill
+# 先出手时暴击率增加65%
+- id: effect_skill_add_crit_rate_65_if_first
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addCritRate
+    target: usingSkillContext
+    value: 65
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: isFirstSkillUsedThisTurn
