--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -7985,3 +7985,173 @@
   tags: [yutu]
   effect:
     - effect_skill_fixed_damage_over_atk_500 # TODO: 附加自身物攻值＞500的伤害
+- id: skill_ruili
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+- id: skill_dingshizhadan
+  element: Flying
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_50_or_add_mark_dingshizhadan # TODO: 使对手获得定时炸弹 具有时间法则时直接触发
+- id: skill_shijianfaze
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shijianfaze # TODO: 使自身获得时间法则
+- id: skill_gaosuzhuangji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect: []
+- id: skill_shijianjiasu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_both_spe_1_stage
+    - effect_skill_reduce_opponent_spe_2_stage_if_shijianfaze
+- id: skill_shiguangdaoliu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_both_spa_1_stage
+    - effect_skill_raise_self_spa_2_stage_if_has_shijianfaze
+- id: skill_shiguangchongji
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_first
+- id: skill_shiguangliushu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_50_if_first
+- id: skill_shiguanghudun
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shijianhudun
+- id: skill_shiguangzhongcai
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage_20_percent
+- id: skill_shijianzhadan
+  element: Flying
+  category: Special
+  target: opponent
+  power: 85
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_100_or_add_mark_shijianzhadan # TODO: 使对手获得时间炸弹 具有时间法则时直接触发
+- id: skill_yuzhi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 25
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shanbi
+- id: skill_chuansuoweilai
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_chuansuoweilai # TODO: 使自身获得穿梭未来
+- id: skill_shiguanghongliu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 85
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_65_if_first # TODO: 先出手时暴击率增加65%
