--- a/data/species.yaml
+++ b/data/species.yaml
@@ -5890,3 +5890,120 @@
     - mark_ability_yuren
   emblem:
     - mark_emblem_yuren
+- id: pet_taimu
+  num: 198
+  element: Flying
+  baseStats:
+    hp: 89
+    atk: 120
+    def: 119
+    spa: 124
+    spd: 112
+    spe: 110
+  genderRatio:
+    - 6
+    - 4
+  heightRange:
+    - 15
+    - 21
+  weightRange:
+    - 24
+    - 29
+  learnable_skills:
+    - skill_id: skill_paida
+      level: 1
+      hidden: false
+    - skill_id: skill_zhuoji
+      level: 5
+      hidden: false
+    - skill_id: skill_fuchongtuji
+      level: 11
+      hidden: false
+    - skill_id: skill_dingshizhadan
+      level: 16
+      hidden: false
+    - skill_id: skill_shijianfaze
+      level: 21
+      hidden: false
+    - skill_id: skill_gaosuzhuangji
+      level: 26
+      hidden: false
+  ability:
+    - mark_ability_shiguang
+  emblem:
+    - mark_emblem_xianzhi
+- id: pet_taimuer
+  num: 199
+  element: Flying
+  baseStats:
+    hp: 179
+    atk: 165
+    def: 164
+    spa: 174
+    spd: 157
+    spe: 160
+  genderRatio:
+    - 6
+    - 4
+  heightRange:
+    - 43
+    - 48
+  weightRange:
+    - 56
+    - 61
+  learnable_skills:
+    - skill_id: skill_paida
+      level: 1
+      hidden: false
+    - skill_id: skill_zhuoji
+      level: 5
+      hidden: false
+    - skill_id: skill_fuchongtuji
+      level: 11
+      hidden: false
+    - skill_id: skill_dingshizhadan
+      level: 16
+      hidden: false
+    - skill_id: skill_shijianfaze
+      level: 21
+      hidden: false
+    - skill_id: skill_gaosuzhuangji
+      level: 26
+      hidden: false
+    - skill_id: skill_ruili
+      level: 31
+      hidden: false
+    - skill_id: skill_shijianjiasu
+      level: 36
+      hidden: false
+    - skill_id: skill_shiguangdaoliu
+      level: 41
+      hidden: false
+    - skill_id: skill_shiguangchongji
+      level: 46
+      hidden: false
+    - skill_id: skill_shiguangliushu
+      level: 51
+      hidden: false
+    - skill_id: skill_shiguanghudun
+      level: 56
+      hidden: false
+    - skill_id: skill_shiguangzhongcai
+      level: 60
+      hidden: true
+    - skill_id: skill_shijianzhadan
+      level: 60
+      hidden: true
+    - skill_id: skill_yuzhi
+      level: 60
+      hidden: true
+    - skill_id: skill_chuansuoweilai
+      level: 60
+      hidden: true
+    - skill_id: skill_shiguanghongliu
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_shiguang
+  emblem:
+    - mark_emblem_xianzhi
