fix(battle): resolve stat level mark stacking and cleanup issues
- Add isActive check in AddMarkPhase to only find active marks
- Fix sign change logic to avoid unnecessary replacement when newLevel is 0
- Correct execution order in replaceStatLevelMark to prevent owner nullification
- Add fallback orphaned mark cleanup mechanism in RemoveMarkPhase
- Fix YAML configuration error in effect_skill_raise_both_spe_1_stage

This resolves the issue where stat level marks were incorrectly stacking
on destroyed marks instead of creating new ones, and ensures proper mark
cleanup without leaving orphaned references.

Fixes: Speed stage mark stacking logic error

--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -8486,9 +8486,9 @@
   apply:
     - <<: *apply_self_statstage_+1_template
       statType: spe
-    - <<: *apply_opponent_statstage_-1_template
+    - <<: *apply_self_statstage_+1_template
+      target: opponent
       statType: spe
-      value: 1
   condition:
     type: selfUseSkill
 # 具有时间法则时，弱化对手两级
