--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -8155,3 +8155,159 @@
   tags: []
   effect:
     - effect_skill_add_crit_rate_65_if_first # TODO: 先出手时暴击率增加65%
+- id: skill_jianita
+  element: Ground
+  category: Special
+  target: opponent
+  power: 55
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_5_percent
+- id: skill_yuecuoyueyong
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yuecuoyueyong
+- id: skill_zhendibo
+  element: Ground
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_10_percent
+- id: skill_lumangchongzhuang
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 95
+  rage: 15
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_self_damage_25_percent
+- id: skill_manxinghuifu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_huifu
+- id: skill_qunniujianita
+  element: Ground
+  category: Special
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_15_percent
+- id: skill_suishichongzhuang
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 105
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_self_damage_25_percent
+- id: skill_yongmengjianita
+  element: Ground
+  category: Special
+  target: opponent
+  power: 100
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_25_percent
+- id: skill_wanyouyinli
+  element: Ground
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage
+- id: skill_guailijianita
+  element: Ground
+  category: Special
+  target: opponent
+  power: 105
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_30_percent
+- id: skill_yongqichongzhuang
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 115
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_self_damage_25_percent
+- id: skill_zuli
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_atk_1_stage
+- id: skill_jiancipifu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fantan
