--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -206,3 +206,4 @@ mark_shijianzhadan: 'https://seer2-resource.yuuinih.com/png/markImage/3194.png'
 mark_yuzhiweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3195.png'
 mark_chuansuoweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3196.png'
 mark_shiguangchongsheng: 'https://seer2-resource.yuuinih.com/png/markImage/3198.png'
+mark_yuecuoyueyong: 'https://seer2-resource.yuuinih.com/png/markImage/3065.png'
