--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -1,4 +1,3 @@
-# 埃鲁系列技能音效
 skill_fusudadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_001.mp3'
 skill_silieshabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_001.mp3'
 skill_julidadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_002.mp3'
@@ -677,3 +676,16 @@ skill_shijianzhadan: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp
 skill_yuzhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
 skill_chuansuoweilai: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
 skill_shiguanghongliu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_jianita: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_yuecuoyueyong: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_zhendibo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_lumangchongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_manxinghuifu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_qunniujianita: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_suishichongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_yongmengjianita: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_wanyouyinli: 'https://seer2-resource.yuuinih.com/sound/skill/10326.mp3'
+skill_guailijianita: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yongqichongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_zuli: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_jiancipifu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
